<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="50dp"
    android:paddingBottom="20dp"
    android:background="@color/backgroundLight">

    <!-- Tombol Back di pojok kiri atas -->

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toStartOf="@+id/tvCategory"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <!-- Tulisan Category di tengah bagian atas -->
    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- ScrollView untuk konten di bawah -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- LinearLayout untuk button 1 dan RecyclerView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--    Button Add      -->
            <Button
                android:id="@+id/btnAddCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/BackgroundBlue"
                android:text="@string/tambah_category"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:drawableTint="@color/blue"
                android:fontFamily="@font/sf"
                android:background="@drawable/rounded_button"
                android:layout_marginBottom="35dp"/>

            <!-- RecyclerView untuk daftar kategori -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
